<resources>

    <string name="app_name">ClarityNotes</string>
    <string name="settings">Settings</string>

    <string name="header">Header</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vel nisl vel eros accumsan lacinia. Pellentesque vel tellus vitae purus interdum sagittis. Pellentesque vehicula odio ac nibh bibendum suscipit.</string>
    <string name="add_ci_gen">添加新词根</string>
    <string name="switchView">Switch</string>
    <string name="switchViewCompat">SwitchCompat</string>
    <string name="radiobutton">Ratio Button</string>
    <string name="edit_text">Input field</string>

    <string name="primary_color">Primary Color</string>
    <string name="primary_color_summary">Change the primary theme color</string>

    <string name="accent_color">Accent Color</string>
    <string name="accent_color_summary">Change the accent theme color</string>

    <string name="primary_text_color">Primary Text Color</string>
    <string name="primary_text_color_summary">Change the primary text color</string>

    <string name="secondary_text_color">Secondary Text Color</string>
    <string name="secondary_text_color_summary">Change the secondary text color</string>

    <string name="colored_status_bar">Colored Status Bar</string>
    <string name="colored_status_bar_summary">Toggle status bar coloring</string>

    <string name="colored_nav_bar">Colored Navigation Bar</string>
    <string name="colored_nav_bar_summary">Toggle navigation bar coloring</string>
    <string name="drawer_about">关于我</string>
    <string name="drawer_home">首页</string>
    <string name="drawer_close">Close nav drawer</string>
    <string name="drawer_open">Open nav drawer</string>

    <string name="about">About</string>
    <string name="about_body"><![CDATA[
        <b>Clarity Note</b></br>, a library  designed by <b>Aidan Follestad</b> (along with various contributors on GitHub).<br/>
        <a href=\'http://aidanfollestad.com\'>Website</a>&nbsp;&nbsp;
        <a href=\'https://twitter.com/afollestad\'>Twitter</a>&nbsp;&nbsp;
        <a href=\'https://google.com/+AidanFollestad\'>Google+</a>&nbsp;&nbsp;
        <a href=\'https://github.com/afollestad\'>GitHub</a>&nbsp;&nbsp;
        <a href=\'https://www.linkedin.com/in/afollestad\'>LinkedIn</a>
    ]]></string>
    <string name="dismiss">Dismiss</string>
    <string name="radiobutton_clickme">Radio button (click me)</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_summary">Apply a dark theme throughout the app</string>
    <string name="light_status_bar_mode">Light Status Bar Mode</string>
    <string name="light_toolbar_mode">Light Toolbar Mode</string>
    <string name="not_available_below_m">Not available below 6.0 Marshmallow.</string>
    <string name="not_available_below_lollipop">Not available below 5.0 Lollipop.</string>
    <string name="rv_sample">RV Sample</string>
    <string name="tabs_sample">Tabs Sample</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sed magna et dolor luctus mollis. Sed suscipit quam enim, in iaculis turpis finibus quis. Morbi fermentum ante quis magna tempus suscipit. Sed rhoncus sed felis non elementum. Morbi porttitor molestie mauris, eget maximus ante sagittis eget. Donec id congue mauris, quis pulvinar erat. Sed cursus est eu erat malesuada vehicula. Fusce est dui, tempus a leo a, finibus accumsan tellus. Duis vitae sem ullamcorper, hendrerit odio ac, vestibulum orci. Nunc et dui nec ligula semper congue eget in sapien. Vestibulum consectetur vel lacus sed hendrerit. Interdum et malesuada fames ac ante ipsum primis in faucibus. In justo mi, mollis eu leo non, malesuada consequat nisi. Vestibulum euismod mauris dui, in volutpat est placerat et. In hac habitasse platea dictumst.  Cras vitae suscipit quam. Ut orci enim, laoreet non mi in, convallis pretium quam. Donec lobortis nisi ut malesuada auctor. Aenean vel porttitor velit. Cras tincidunt, purus ut volutpat mattis, magna lectus sodales arcu, eget pretium nisi ex et nisi. Vivamus vel euismod nulla. Vivamus eget metus sit amet lacus tempor faucibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sed magna et dolor luctus mollis. Sed suscipit quam enim, in iaculis turpis finibus quis. Morbi fermentum ante quis magna tempus suscipit. Sed rhoncus sed felis non elementum. Morbi porttitor molestie mauris, eget maximus ante sagittis eget. Donec id congue mauris, quis pulvinar erat. Sed cursus est eu erat malesuada vehicula. Fusce est dui, tempus a leo a, finibus accumsan tellus. Duis vitae sem ullamcorper, hendrerit odio ac, vestibulum orci. Nunc et dui nec ligula semper congue eget in sapien. Vestibulum consectetur vel lacus sed hendrerit. Interdum et malesuada fames ac ante ipsum primis in faucibus. In justo mi, mollis eu leo non, malesuada consequat nisi. Vestibulum euismod mauris dui, in volutpat est placerat et. In hac habitasse platea dictumst.  Cras vitae suscipit quam. Ut orci enim, laoreet non mi in, convallis pretium quam. Donec lobortis nisi ut malesuada auctor. Aenean vel porttitor velit. Cras tincidunt, purus ut volutpat mattis, magna lectus sodales arcu, eget pretium nisi ex et nisi. Vivamus vel euismod nulla. Vivamus eget metus sit amet lacus tempor faucibus.</string>
    <string name="collapsing_toolbar">Collapsing Toolbar</string>
    <string name="drawer_tablayout">一日一记忆</string>
    <string name="drawer_recyclerview">图书阅读中心</string>
    <string name="button">Button</string>
    <string name="drawer_collapsingtoolbar">钱都花在哪里了</string>
    <string name="drawer_settings">个性设置</string>
    <string name="search">Search</string>
    <string name="search_view_example">SearchView example…</string>
    <string name="light_ui_modes">Light UI Modes</string>
    <string name="system_ui_colors">System UI Colors</string>
    <string name="base_theme">Base Theme</string>
    <string name="ate_colors">ATE Colors</string>

    <string name="other_textsizes_note">Note: there are other text size configurations not included here for simplicity reasons.</string>
    <string name="headline_textsize">Headline Text Size</string>
    <string name="title_textsize">Title Text Size</string>
    <string name="subheading_textsize">Subheading Text Size</string>
    <string name="body_textsize">Body Text Size</string>
    <string name="headline_textsize_desc">Apply a text size to all headline text views, %ddp</string>
    <string name="title_textsize_desc">Apply a text size to all title text views, %ddp</string>
    <string name="subheading_textsize_desc">Apply a text size to all subheading text views, %ddp</string>
    <string name="body_textsize_desc">Apply a text size to all body text views, %ddp</string>
    <string name="text_sizes">Text Sizes</string>
    <string name="defaultValue">Default</string>
    <string name="fragment_theming">Fragment Theming!</string>
    <string name="drawer_widgets">心灵鸡汤呀！</string>
    <string name="drawer_misc">或许你该听听音乐</string>
    <string name="misc">Miscellaneous</string>
    <string name="text_input_layout">Text Input Layout</string>
    <string name="regular_input">Regular Input</string>
    <string name="main_rb_words">单词</string>
    <string name="main_rb_phrase">短语</string>
    <string name="main_rb_sentence">句子</string>
    <string name="main_rb_writing">读写</string>
    <string name="wordslist">单词列表</string>
    <string name="add_words_list">添加</string>
    <string name="add_phrase">添加新短语</string>
    <string name="refresh">刷新</string>
    <string name="great_sentence">好句清单</string>
    <string name="add_sentence_item">新增一条</string>
    <string name="dialog_edit_author">作者</string>
    <string name="dialog_edit_source">内容来源</string>
    <string name="dialog_edit_content">编辑内容</string>
    <string name="checkbox">checkbox</string>
    <string name="phrase_list">短语列表</string>
    <string name="dialog_edit_phrase">单词短语</string>
    <string name="dialog_edit_yin_biao">音标</string>
    <string name="dialog_edit_translation">翻译</string>
    <string name="dialog_edit_example_sentence">例句</string>
    <string name="dialog_edit_word_text">请输入词根:</string>
    <string name="dialog_edit_word_translation">请输入词根含义:</string>
    <string name="write_note">撰写日记</string>
    <string name="daily_tile">日记</string>
    <string name="read_record_title">读书笔记</string>
    <string name="record_figure_character">人物性格:</string>
    <string name="record_figure_thing">人物事迹:</string>
    <string name="add_record">添加一本新书</string>
    <string name="dialog_book_name">书名</string>
    <string name="dialog_book_author">书的作者</string>
    <string name="edit_diary_et_chapter">请输入章节</string>
    <string name="dialog_edit_figurn_name">人物名称</string>
    <string name="dialog_edit_figurn_gander">人物性别</string>
    <string name="dialog_edit_things">人物事迹</string>
    <string name="dialog_edit_figurn_character">人物性格</string>

    <!--关于App-->
    <string name="app_version">Version %1$s</string>
    <string name="about_clarityNote">关于ClarityNotes</string>
    <string name="about_drysister_detail">
        ClarityNotes，没有想到比这俩个单词更直观的中文替换，
        这个软件的主要功能是，记忆单词，短语和句子。
        整个APP的构思是根据我平时记忆英语的方法进行设计的，
        另外在侧滑栏中，实现了一个日记记录薄。
        在第四个页面中，实现了一个读书笔记的记录功能。
        软件均系本人原创，不存在抄袭，由于主要是用来巩固已学知识的习作，
        所以实现比较粗糙，如有良好建议可通过如下方式，向我提出，
        我一定会虚心聆听，做出版本的更迭和改进。

        \n我的QQ号:895391664
        \n我的微信号:lyf1776438456 进行反馈，

        \n项目开源，遵循GPL v3协议，
        \n\n仓库地址：https://github.com/coder-pig/DrySister
    </string>
    <string name="about_me">关于我</string>
    <string name="about_me_detail">
        一个三流Android开发者，还只是一个小白中的小白
        \n博客：http://blog.csdn.net/coder_pig
        \nGitHub：https://github.com/coder-pig
    </string>
    <string name="about_open_source">用到的开源库(闲了再补充协议)</string>
    <string name="about_open_source_detail">
         com.android.support:appcompat-v7
         \ncom.android.support:design
         \ncom.android.support:cardview-v7
         \ncom.android.support.constraint:constraint-layout
         \ncom.makeramen:roundedimageview
         \ncom.github.bumptech.glide:glide
         \ncom.github.bumptech.glide:compiler
    </string>
    <string name="about_label">关于</string>
    <string name="delete">删除</string>
    <string name="dialog_edit_sentence">输入美句</string>

    <string-array name="light_status_mode_entries">
        <item>Off, status bar icons will be white</item>
        <item>On, status bar icons will be black</item>
        <item>Auto, status bar icons will be black if primary color is light</item>
    </string-array>

    <string-array name="light_toolbar_mode_entries">
        <item>Off, toolbar text/icons will be white</item>
        <item>On, toolbar text/icons will be black</item>
        <item>Auto, toolbar text/icons will be black if primary color is light</item>
    </string-array>

    <string-array name="light_status_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>
