<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="3">



           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/content_inset">

               <EditText
                   android:id="@+id/dialog_edit_phrase"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/dialog_edit_phrase"/>

           </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/content_inset">

               <EditText
                   android:id="@+id/dialog_edit_yin_biao"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/dialog_edit_yin_biao" />

           </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/content_inset">

               <EditText
                   android:id="@+id/dialog_edit_translation"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/dialog_edit_translation" />

           </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/content_inset">

               <EditText
                   android:id="@+id/dialog_edit_example_sentence"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/dialog_edit_example_sentence" />

           </android.support.design.widget.TextInputLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_marginBottom="@dimen/content_inset"-->
        <!--android:layout_weight="1"-->
        <!--android:elevation="@dimen/toolbar_elevation"-->
        <!--android:orientation="vertical">-->
       <!--</LinearLayout>-->

</LinearLayout>