<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/appbar_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:elevation="@dimen/toolbar_elevation"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentInsetStart="@dimen/content_inset"
            app:popupTheme="?toolbar_popup_theme" />

        <FrameLayout
            android:id="@+id/main_tab_fl"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RadioGroup
            android:id="@+id/main_rg"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/tab_height"
            android:gravity="bottom"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/words_rb"
                style="@style/home_bottom_tab_style"
                android:checked="true"
                android:drawableTop="@drawable/ic_tab_words"
                android:text="@string/main_rb_words" />

            <RadioButton
                android:id="@+id/phrase_rb"
                style="@style/home_bottom_tab_style"
                android:drawableTop="@drawable/ic_tab_phrase"
                android:text="@string/main_rb_phrase" />

            <RadioButton
                android:id="@+id/sentence_rb"
                style="@style/home_bottom_tab_style"
                android:drawableTop="@drawable/ic_tab_sentence"
                android:text="@string/main_rb_sentence" />

            <RadioButton
                android:id="@+id/write_read_rb"
                style="@style/home_bottom_tab_style"
                android:drawableTop="@drawable/ic_tab_writing"
                android:text="@string/main_rb_writing" />

        </RadioGroup>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer" />

</android.support.v4.widget.DrawerLayout>